<resources>
    <string name="app_name">LgTvRemote</string>
    <string name="pref_ip">Mqtt server ip</string>
    <string name="pref_username">Mqtt server username</string>
    <string name="pref_password">Mqtt server password</string>
    <string name="pref_title">Preferences</string>
    <string name="pref_preset1">Preset 1 label</string>
    <string name="pref_preset2">Preset 2 label</string>
    <string name="pref_preset3">Preset 3 label</string>
    <string name="pref_preset4">Preset 4 label</string>

    <string name="pref_preset1code">Preset 1 code</string>
    <string name="pref_preset2code">Preset 2 code</string>
    <string name="pref_preset3code">Preset 3 code</string>
    <string name="pref_preset4code">Preset 4 code</string>


    <string name="notset">Error: Check settings</string>
    <string name="mess_sent">Message sent</string>
    <string name="nosettings">Settings not set</string>
    <string name="helptitle">Help</string>
    <string name="helptext">
        The app sends codes for LG TV:s via Mqtt to the broker with the subject irsender.
        This app requires an Mqtt broker and a Mqtt-enabled Ir-sender. The broker is a software which handles Mqtt-messages in the network.
        The Ir-sender is a Esp01 connected via Wifi that listens to Mqtt messages with the topic irsender (see https://github.com/bphermansson/espMqttIrblaster).
        When messages with this topic arrives it reads the payload and converts it to ir codes. These are then sent via the
        devices ir diode.

        Start by opening the settings. There you set the Ip of your Mqtt-broker, the userid and the password.
        After that the app is ready for use.
        Preset buttons can be configured with label and code. The code is from http://lirc.sourceforge.net/remotes/lg/AKB69680403.
        For example, the page says:
        KEY_1                    0x8877
        Then set 8877 as preset code and the button will send a \'1\'.
        A code can be just one code, or several codes divided by a comma.


    </string>
</resources>
