<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title">
        <EditTextPreference
            android:key="Mqtt server ip"
            android:title="@string/pref_ip"
            android:defaultValue="192.168.1.1" />
        <EditTextPreference
            android:key="Mqtt server username"
            android:title="@string/pref_username"
            android:defaultValue="user" />
        <EditTextPreference
            android:key="Mqtt server password"
            android:title="@string/pref_password"
            android:defaultValue="password" />
        <EditTextPreference
            android:key="preset1"
            android:title="@string/pref_preset1"
            android:defaultValue="Preset 1" />
        <EditTextPreference
            android:key="preset2"
            android:title="@string/pref_preset2"
            android:defaultValue="Preset 2" />
        <EditTextPreference
            android:key="preset3"
            android:title="@string/pref_preset3"
            android:defaultValue="Preset 3" />
        <EditTextPreference
            android:key="preset1code"
            android:title="@string/pref_preset1code"
            android:defaultValue="Preset 1" />
        <EditTextPreference
            android:key="preset2code"
            android:title="@string/pref_preset2code"
            android:defaultValue="Preset 2" />
        <EditTextPreference
            android:key="preset3code"
            android:title="@string/pref_preset3code"
            android:defaultValue="Preset 3" />
    </PreferenceCategory>
    </PreferenceScreen>